Lots of new stuff. Log in seems to work. Need to open an issue about not showing error message on incorrect password.

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -5,3 +5,22 @@
 body {
    padding-top: 15px;
 }
+
+.white {
+    color: white;
+}
+
+.black {
+    color: black;
+}
+
+.glyphicon-navbar {
+  padding: 10px 16px;
+  font-size: 18px;
+  line-height: 1.33;
+  border-radius: 6px;
+}
+
+.navbar-collapse.in {
+    overflow-y: visible;
+}
